# IstanbulMedic-Connect

./: .env.example  .gitignore  QUICKSTART.md  README.md  TESTING_PHASE1.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-booking.sh  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
app/: globals.css  layout.tsx  page.tsx
components/: A2UIPage.tsx  Calculator.tsx  DeclarativeGenUI.tsx  GeminiChatWrapper.tsx  GeminiInput.tsx  MCPAppsGenUI.tsx  NotePad.tsx  StaticGenUI.tsx  TodoList.tsx  WeatherCard.tsx  WeatherLoadingState.tsx
contexts/: AuthContext.tsx  LanguageContext.tsx
docs/: README.md  backend-schema-mapping.md  filter-implementation-plan.md  forum-scraping-schema.md  hrn-frontend-plan.md  hrn-implementation.md  hrn-score-plan.md  hrn-scraper-progress.md  instagram-section-data-support.md  instagram-signals-implementation.md  next-steps-integration.md  pr-review-langchain-implementation.md  server-vs-client-components.md  session-summary-2026-02-28.md  test-coverage-plan.md
lib/: constants.ts  filterConfig.ts  social-icons.tsx  (+3 more)
scraper/: .gitignore  README.md  httpcache.py  matcher.py  merger.py  normalize.py  persistence.py  pyproject.toml  run.py  seeds.json  types.py
scraper/sources/: __init__.py  iahrs.py  ishrs.py
scraper/tests/: fake_supabase.py  test_iahrs.py  test_integration.py  test_ishrs.py  test_matcher.py  test_merger.py  test_persistence.py
scraper/tests/fixtures/: iahrs_basic.html  iahrs_garbage.html  iahrs_unicode.html  ishrs_fellow.html  ishrs_member.html  ishrs_no_name.html  ishrs_no_tier.html
(+391 files in other folders)
